ProdIND/ProdPrograms/force-app/main/default/objects/User/fields/BMD_Sensor_No__c.field-meta.xml
<CustomField>
    <fullName>BMD_Sensor_No__c</fullName>
    <label>BMD_Sensor_No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>