ProdIND/ProdPrograms/force-app/main/default/objects/User/fields/Domain_Access__c.field-meta.xml
<CustomField>
    <fullName>Domain_Access__c</fullName>
    <label>Domain Access</label>
    <length>1</length>
    <type>Text</type>
</CustomField>