ProdIND/ProdPrograms/force-app/main/default/objects/User/fields/IND_BEN_Code__c.field-meta.xml
<CustomField>
    <fullName>IND_BEN_Code__c</fullName>
    <label>BEN Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>