ProdIND/ProdPrograms/force-app/main/default/objects/User/fields/Maker_Id__c.field-meta.xml
<CustomField>
    <fullName>Maker_Id__c</fullName>
    <label>Maker Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>