ProdIND/ProdPrograms/force-app/main/default/objects/User/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <label>State Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>