ProdIND/ProdPrograms/force-app/main/default/objects/User/validationRules/Validate_10_digits_mobile_number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_10_digits_mobile_number</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( MobilePhone )  &gt; 10  ||  LEN( MobilePhone )   &lt;  10</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>Mobile number should be of 10 digits</errorMessage>
</ValidationRule>