ProdIND/ProdPrograms/force-app/main/default/objects/User/listViews/AdminUsers.listView-meta.xml
<ListView>
    <fullName>AdminUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <label>Admin Users</label>
</ListView>