ProdIND/ProdPrograms/force-app/main/default/objects/User/listViews/Created_Partner_Users.listView-meta.xml
<ListView>
    <fullName>Created_Partner_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/21/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>equals</operation>
        <value>IMFS Partner User</value>
    </filters>
    <label>Created Partner Users</label>
</ListView>