ProdIND/ProdPrograms/force-app/main/default/objects/User/listViews/Email_User.listView-meta.xml
<ListView>
    <fullName>Email_User</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>equals</operation>
        <value>rajagopallan.padmanaban@indusind.com</value>
    </filters>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>equals</operation>
        <value>solomong@parry.murugappa.com</value>
    </filters>
    <label>Email User</label>
</ListView>