ProdIND/ProdPrograms/force-app/main/default/objects/User/listViews/Query.listView-meta.xml
<ListView>
    <fullName>Query</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.USERNAME</field>
        <operation>contains</operation>
        <value>iblr19046@indusind.com</value>
    </filters>
    <label>Query</label>
</ListView>